exemplos/simul-shop/istio/12/authorization-policy-allow-catalogue.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "catalogue-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: catalogue
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/tutorial/sa/front-end"]
    to:
    - operation:
        methods: ["GET"]
