exemplos/simul-shop/istio/12/authorization-policy-allow-front-end.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "front-end-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: front-end
  rules:
  - to:
    - operation:
        methods: ["GET"]
